Fix burger margin on mobile devices

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
 	padding-right: 10%;	
 	transition: background-color 1s, opacity 1s;
 }
+@media screen and (max-width: 1024px) {
+	.navbar{
+		padding-right: 0%;
+	}
+}
 
 #nav{
 	position: fixed;
